--- a/TrainQuery/src/main/webapp/WEB-INF/web.xml
+++ b/TrainQuery/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,12 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
   <display-name>Archetype Created Web Application</display-name>
+  
+  	<!-- 指定Spring Bean的配置文件所在目录。默认配置在WEB-INF目录下 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
 
    <servlet>
       <servlet-name>HelloWeb</servlet-name>
@@ -18,6 +24,10 @@
       <url-pattern>/</url-pattern>
    </servlet-mapping>
    
+   	<!-- Spring配置 -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
    
   	<!-- 编码过滤器 -->
 	<filter>
